ojos como metronomo

--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ h3{
 	width: 140px;
 	height: 140px;
 	background-color: #002b8a;
-	background-image: url(../img/pacha.gif);
+	background-image: url(../img/pacha-ojos-0.png);
 	background-repeat: no-repeat;
 	background-size: contain;
 	position: relative;
