--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ h3{
 #sound-codes{
 	width: 359px;
 	height: 140px;
+  margin-top: 14px;
 	padding-left: 90px;
 	padding-right: 0px;
 	border: solid silver 1px;
@@ -101,7 +102,7 @@ h3{
 }
 #shareIt {
 	margin-top: 5px;
-	margin-bottom: 5px; 
+	margin-bottom: 5px;
 }
 #shareBtn{
 	font-size:12pt;
@@ -121,7 +122,7 @@ h3{
 	display: inline-grid;
     height: 50px !important;
     position: relative;
-    top: -12px;
+    top: -11.5px;
     margin-bottom: 0px;
 }
 #bpm {
@@ -246,4 +247,3 @@ h3{
 .collapse {
 	display:none;
 }
-
